changed titles and authors

--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@ markdown:         kramdown
 permalink:        pretty
 
 # Setup
-title:            National Security Archive Internship @ Swarthmore College
+title:            "NS Archive Internship @ Swarthmore College"
 tagline:          'coming soon....'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
-baseurl:          /
+description:      "Website for the National Security Archive Internship @ Swarthmore College"
+url:              ""
+baseurl:          ""
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           "Swarthmore College Libraries"
+
 
 paginate:         5
 
