--- a/_config.yml
+++ b/_config.yml
@@ -5,11 +5,11 @@ markdown:         kramdown
 permalink:        pretty
 
 # Setup
-title:            "NS Archive Internship @ Swarthmore College"
-tagline:          'coming soon....'
-description:      "Website for the National Security Archive Internship @ Swarthmore College"
+title:            "NS Archive Internship" 
+tagline:          "coming soon...."
+description:      "@ Swarthmore College"
 url:              ""
-baseurl:          /
+baseurl:          ""
 
 author:
   name:           "Swarthmore College Libraries"
@@ -21,7 +21,7 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/swat-ds/nsarchive.swarthmore.edu
 
 gems: [jekyll-paginate]
 
