adjusted font size

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ markdown:         kramdown
 permalink:        pretty
 
 # Setup
-title:            "NS Archive Internship" 
+title:            "National Security Archive Internship" 
 tagline:          "coming soon...."
 description:      "@ Swarthmore College"
 url:              ""
