--- a/_config.yml
+++ b/_config.yml
@@ -22,5 +22,44 @@ github:
 
 gems: [jekyll-paginate]
 
+prose:
+  rooturl: '_posts'
+  media: 'media'
+  metadata:
+    _posts:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "post"
+      - name: "categories"
+        field:
+          element: "multiselect"
+          label: "Add categories"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Left"
+              value: "left"
+            - name: "Right"
+              value: "Right"
+      - name: "date"
+        field:
+          element: "hidden"
+          value: CURRENT_DATETIME
+      - name: "title"
+        field:
+          element: "text"
+          label: "title"
+      - name: "authors"
+        field:
+          element: "multiselect"
+          label: "authors"
+          placeholder: "choose or add authors"
+          alterable: true
+      - name: "published"
+        field:
+          element: "checkbox"
+          label: "Publish"
+          value: false 
+
 include: 
   - _pages
