--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ permalink:        pretty
 title:            "National Security Archive Internship" 
 tagline:          "coming soon....."
 description:      "@ Swarthmore College"
-url:              ""
-baseurl:          /
+url:              "http://nsarchive.swarthmore.edu/"
+baseurl:          
 
 author:
   name:           "Swarthmore College Libraries"
