--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:        pretty
 
 # Setup
 title:            "National Security Archive Internship"
-tagline:          "coming soon....."
+tagline:          ""
 description:      "@ Swarthmore College"
 url:              ""
 baseurl:          /
